--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=M+PLUS+1&family=Roboto:ital,wght@0,100;0,300;0,400;1,300&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="script.css">
 </head>
 
 <body>
@@ -25,7 +31,7 @@
             <a href="">Solar Roof</a>
             <a href="">Solar Panels</a>
         </nav>
-        <nav class="right desktop">
+        <nav class="right">
             <a href="" class="desktop">Shop</a>
             <a href="" class="desktop">Account</a>
             <a href="">Menu</a>
