this has the the background images of the tesla

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=M+PLUS+1&family=Roboto:ital,wght@0,100;0,300;0,400;1,300&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="script.css">
+    <link rel="stylesheet" href="assests/script.css">
 </head>
 
 <body>
@@ -37,6 +37,14 @@
             <a href="">Menu</a>
         </nav>
     </header>
+    <section style="background-image: url('images/model-3.jpg')"></section>
+    <section style="background-image: url('images/model-y.jpg')"></section>
+    <section style="background-image: url('images/model-s.jpg')"></section>
+    <section style="background-image: url('images/model-x.jpg')"></section>
+    <section style="background-image: url('images/solarpanels.jpg')"></section>
+    <section style="background-image: url('images/roof.jpg')"></section>
+    <section style="background-image: url('images/accessories.jpg')"></section>
+
 </body>
 
 </html>
