this update has style background with butttons fro css

--- a/index.html
+++ b/index.html
@@ -37,13 +37,71 @@
             <a href="">Menu</a>
         </nav>
     </header>
-    <section style="background-image: url('images/model-3.jpg')"></section>
-    <section style="background-image: url('images/model-y.jpg')"></section>
-    <section style="background-image: url('images/model-s.jpg')"></section>
-    <section style="background-image: url('images/model-x.jpg')"></section>
-    <section style="background-image: url('images/solarpanels.jpg')"></section>
-    <section style="background-image: url('images/roof.jpg')"></section>
-    <section style="background-image: url('images/accessories.jpg')"></section>
+
+    <section style="background-image: url('images/Model-3.jpg')">
+        <div class="content">
+            <h1>Model-3</h1>
+            <p>Order Online for <a href="">Touchless Delivery</a></p>
+            <div class="butons">
+                <a href="">Custom Order</a>
+                <a href="">Existing Inventory></a>
+            </div>
+        </div>
+    </section>
+    <section style="background-image: url('images/model-y.jpg')">
+        <div class="content">
+            <h1>Model-3</h1>
+            <p>Order Online for <a href="">Touchless Delivery</a></p>
+            <div class="butons">
+                <a href="">Custom Order</a>
+                <a href="">Existing Inventory></a>
+            </div>
+    </section>
+    <section style="background-image: url('images/model-s.jpg')">
+        <div class="content">
+            <h1>Model-3</h1>
+            <p>Order Online for <a href="">Touchless Delivery</a></p>
+            <div class="butons">
+                <a href="">Custom Order</a>
+                <a href="">Existing Inventory></a>
+            </div>
+    </section>
+    <section style="background-image: url('images/model-x.jpg')">
+        <div class="content">
+            <h1>Model-3</h1>
+            <p>Order Online for <a href="">Touchless Delivery</a></p>
+            <div class="butons">
+                <a href="">Custom Order</a>
+                <a href="">Existing Inventory></a>
+            </div>
+    </section>
+    <section style="background-image: url('images/solarpanels.jpg')">
+        <div class="content">
+            <h1>Model-3</h1>
+            <p>Order Online for <a href="">Touchless Delivery</a></p>
+            <div class="butons">
+                <a href="">Custom Order</a>
+                <a href="">Existing Inventory></a>
+            </div>
+    </section>
+    <section style="background-image: url('images/roof.jpg')">
+        <div class="content">
+            <h1>Model-3</h1>
+            <p>Order Online for <a href="">Touchless Delivery</a></p>
+            <div class="butons">
+                <a href="">Custom Order</a>
+                <a href="">Existing Inventory></a>
+            </div>
+    </section>
+    <section style="background-image: url('images/accessories.jpg')">
+        <div class="content">
+            <h1>Model-3</h1>
+            <p>Order Online for <a href="">Touchless Delivery</a></p>
+            <div class="butons">
+                <a href="">Custom Order</a>
+                <a href="">Existing Inventory></a>
+            </div>
+    </section>
 
 </body>
 
