--- a/index.html
+++ b/index.html
@@ -37,14 +37,31 @@
             <a href="">Menu</a>
         </nav>
     </header>
-
+    <aside>
+        <button class="close">&times;</button>
+        <a href="">Existing Inventory</a>
+        <a href=""> Inventory</a>
+        <a href="">Trade-In</a>
+        <a href="">Test Drive</a>
+        <a href="">Insurance</a>
+        <a href="">Cybertruck</a>
+        <a href=""> Roadster</a>
+        <a href="">   Semi</a>
+        <a href=""> Charging</a>
+        <a href="">  Powerwall</a>
+        <a href=""> Commercial Energy</a>
+        <a href=""> Utilities</a>
+        <a href=""> Find Us</a>
+        <a href=""> Support</a>
+        <a href=""> Investor Relations</a>
+    </aside>
     <section style="background-image: url('images/Model-3.jpg')">
         <div class="content">
             <h1>Model-3</h1>
             <p>Order Online for <a href="">Touchless Delivery</a></p>
-            <div class="butons">
+            <div class="buttons">
                 <a href="">Custom Order</a>
-                <a href="">Existing Inventory></a>
+                <a href="">Existing Inventory</a>
             </div>
         </div>
     </section>
@@ -54,7 +71,7 @@
             <p>Order Online for <a href="">Touchless Delivery</a></p>
             <div class="butons">
                 <a href="">Custom Order</a>
-                <a href="">Existing Inventory></a>
+                <a href="">Existing Inventory</a>
             </div>
     </section>
     <section style="background-image: url('images/model-s.jpg')">
@@ -63,7 +80,7 @@
             <p>Order Online for <a href="">Touchless Delivery</a></p>
             <div class="butons">
                 <a href="">Custom Order</a>
-                <a href="">Existing Inventory></a>
+                <a href="">Existing Inventory</a>
             </div>
     </section>
     <section style="background-image: url('images/model-x.jpg')">
@@ -72,7 +89,7 @@
             <p>Order Online for <a href="">Touchless Delivery</a></p>
             <div class="butons">
                 <a href="">Custom Order</a>
-                <a href="">Existing Inventory></a>
+                <a href="">Existing Inventory</a>
             </div>
     </section>
     <section style="background-image: url('images/solarpanels.jpg')">
@@ -81,7 +98,7 @@
             <p>Order Online for <a href="">Touchless Delivery</a></p>
             <div class="butons">
                 <a href="">Custom Order</a>
-                <a href="">Existing Inventory></a>
+                <a href="">Existing Inventory</a>
             </div>
     </section>
     <section style="background-image: url('images/roof.jpg')">
@@ -90,7 +107,7 @@
             <p>Order Online for <a href="">Touchless Delivery</a></p>
             <div class="butons">
                 <a href="">Custom Order</a>
-                <a href="">Existing Inventory></a>
+                <a href="">Existing Inventory</a>
             </div>
     </section>
     <section style="background-image: url('images/accessories.jpg')">
@@ -99,7 +116,7 @@
             <p>Order Online for <a href="">Touchless Delivery</a></p>
             <div class="butons">
                 <a href="">Custom Order</a>
-                <a href="">Existing Inventory></a>
+                <a href="">Existing Inventory</a>
             </div>
     </section>
 
