--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         <nav class="right">
             <a href="" class="desktop">Shop</a>
             <a href="" class="desktop">Account</a>
-            <a href="">Menu</a>
+            <a href="" id="menuBtn">Menu</a>
         </nav>
     </header>
+    <div class="backdrop"></div>
     <aside>
         <button class="close">&times;</button>
         <a href="">Existing Inventory</a>
@@ -46,9 +47,9 @@
         <a href="">Insurance</a>
         <a href="">Cybertruck</a>
         <a href=""> Roadster</a>
-        <a href="">   Semi</a>
+        <a href=""> Semi</a>
         <a href=""> Charging</a>
-        <a href="">  Powerwall</a>
+        <a href=""> Powerwall</a>
         <a href=""> Commercial Energy</a>
         <a href=""> Utilities</a>
         <a href=""> Find Us</a>
@@ -119,7 +120,7 @@
                 <a href="">Existing Inventory</a>
             </div>
     </section>
-
+    <script src="nav.js"></script>
 </body>
 
 </html>
